# martin-scorcese

./: .gitignore  README.md  requirements.txt
api/: dockerfile  main.py  pyproject.toml  rag.py  requirements.txt
data/: conversation.py  persona_first.py  query.py  rag.py  script.py  store_to_db.py
data/raw/: After_Hours.txt  Alice_Doesn't_Live_Here_Anymore.txt  Boxcar_Bertha.txt  Bringing_Out_the_Dead.txt  Cape_Fear.txt  Casino.txt  Gangs_of_New_York.txt  Goodfellas.txt  Hugo.txt  Italianamerican.txt  Killers_of_the_Flower_Moon.txt  Kundun.txt  Mean_Streets.txt  My_Voyage_to_Italy.txt  New_York_New_York.txt  Public_Speaking.txt  Raging_Bull.txt  Shutter_Island.txt  Silence.txt  Taxi_Driver.txt  The_Age_of_Innocence.txt  The_Aviator.txt  The_Color_of_Money.txt  The_Departed.txt  The_Irishman.txt  The_King_of_Comedy.txt  The_Last_Temptation_of_Christ.txt  The_Last_Waltz.txt  The_Wolf_of_Wall_Street.txt  Who's_That_Knocking_at_My_Door.txt  faith.txt  interview.txt  martin_scorsese.txt  requitements.txt  silence_interview.txt
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: Chat.tsx  ChatInput.tsx  ChatMessage.tsx  TypingIndicator.tsx
src/api/: main.py  requirements.txt
