[tool.poetry]
name = "martin-api"
version = "0.1.0"
description = "Martin Scorsese AI Chat API"
authors = ["Your Name"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
flask-cors = "^4.0.0"
sentence-transformers = "^2.2.2"
pinecone-client = "^3.0.0"
python-dotenv = "^1.0.0"
google-generativeai = "^0.3.2"
torch = { version = "^2.2.0", source = "pytorch" }
transformers = "^4.36.2"
numpy = "^1.24.3"
scikit-learn = "^1.3.2"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
